compiler/fir/analysis-tests/testData/resolve/extraCheckers/RedundantCallOfConversionMethod/string.kt
// WITH_STDLIB
val foo = "".<!REDUNDANT_CALL_OF_CONVERSION_METHOD!>toString()<!>